Fixing line spacing on base Grid

--- a/styles-base/base-page.css
+++ b/styles-base/base-page.css
@@ -69,6 +69,7 @@
 }
 .friends{
   font-size: 20px;
+  line-height: normal;
   color: grey;
   font-weight: 500;
   margin-bottom: 12px;
